--- a/app.json
+++ b/app.json
@@ -1,21 +1,24 @@
 {
   "expo": {
-    "name": "My New Project",
-    "description": "A very interesting project.",
-    "slug": "my-new-project",
+    "name": "Burntoast",
+    "description": "Burn, baby, burn.",
+    "slug": "burntoast",
     "privacy": "public",
     "sdkVersion": "25.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./src/assets/images/icon.png",
     "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+    "image": "./src/assets/images/splash.png",
+    "resizeMode": "cover",
+    "backgroundColor": "#ffffff"
     },
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "android": {
+      "package": "io.github.burntoast"
+    },
   }
 }
