--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "getpass": "^0.1.7",
     "graphqlify": "^1.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.20.1",
     "prop-types": "^15.6.0",
     "react": "16.2.0",
     "react-dom": "^16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^0.18.2",
+    "react-native-gesture-responder": "^0.1.1",
     "react-native-global-props": "^1.1.1",
+    "react-native-image-gallery": "^2.1.4",
+    "react-native-scroller": "^0.0.6",
     "react-native-svg": "^5.4.1",
     "react-native-svg-icon": "^0.7.0",
+    "react-native-timeago": "^0.4.0",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
@@ -43,6 +48,7 @@
     "eslint": "^3.19.0",
     "eslint-config-rallycoding": "^3.2.0",
     "eslint-plugin-react": "^7.4.0",
-    "jest-expo": "^25.0.0"
+    "jest-expo": "^25.0.0",
+    "react-native-fetch-blob": "^0.10.8"
   }
 }
