--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,3 @@
-
 {
   "parser": "babel-eslint",
 
@@ -18,6 +17,7 @@
     "react/require-extension": 0,
     "max-len": 0,
     "semi": ["error", "never"],
+    "quotes": ["error", "single"],
     "object-curly-spacing": ["error", "always"],
     "brace-style": ["error", "stroustrup"]
   }
