--- a/app.json
+++ b/app.json
@@ -4,16 +4,22 @@
     "description": "Burn, baby, burn.",
     "slug": "burntoast",
     "privacy": "public",
-    "sdkVersion": "25.0.0",
+    "sdkVersion": "28.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/images/icon.png",
     "splash": {
-    "image": "./src/assets/images/splash.png",
-    "resizeMode": "cover",
-    "backgroundColor": "#ffffff"
+      "image": "./src/assets/images/splash.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#ffffff"
     },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
