--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "es6-promise": "^4.1.1",
-    "expo": "^25.0.0",
+    "expo": "^28.0.0",
     "getpass": "^0.1.7",
     "graphqlify": "^1.1.0",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.20.1",
     "prop-types": "^15.6.0",
-    "react": "16.2.0",
+    "react": "16.3.1",
     "react-dom": "^16.0.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^0.18.2",
     "react-native-gesture-responder": "^0.1.1",
     "react-native-global-props": "^1.1.1",
     "react-native-image-gallery": "^2.1.4",
     "react-native-scroller": "^0.0.6",
-    "react-native-svg": "^5.4.1",
-    "react-native-svg-icon": "^0.7.0",
+    "react-native-svg": "^6.4.1",
+    "react-native-svg-icon": "^0.8.0",
     "react-native-timeago": "^0.4.0",
     "react-native-vector-icons": "^4.4.2",
-    "react-navigation": "^1.0.0-beta.21",
+    "react-navigation": "~2.3.1",
+    "react-navigation-redux-helpers": "^2.0.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -48,7 +49,7 @@
     "eslint": "^3.19.0",
     "eslint-config-rallycoding": "^3.2.0",
     "eslint-plugin-react": "^7.4.0",
-    "jest-expo": "^25.0.0",
+    "jest-expo": "^28.0.0",
     "react-native-fetch-blob": "^0.10.8"
   }
 }
