--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.8.1",
     "whatwg-fetch": "^2.0.3"
