--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Burntoast",
-    "description": "Burn, baby, burn.",
+    "description": "Burn, baby, burn. (dev)",
     "slug": "burntoast",
     "privacy": "public",
     "sdkVersion": "28.0.0",
@@ -26,5 +26,7 @@
     "android": {
       "package": "io.github.burntoast"
     },
+    "facebookAppId": "223129748069711",
+    "facebookDisplayName": "Burntoast",
   }
 }
