--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Burntoast",
-    "description": "Burn, baby, burn. (dev)",
+    "description": "Burn, baby, burn",
     "slug": "burntoast",
     "privacy": "public",
     "sdkVersion": "28.0.0",
@@ -28,5 +28,9 @@
     },
     "facebookAppId": "223129748069711",
     "facebookDisplayName": "Burntoast",
+    "extra": {
+      "env": "dev",
+      "enableReduxLogger": false
+    }
   }
 }
