Add androidStatusBar backgroundColor to app.json

--- a/app.json
+++ b/app.json
@@ -26,6 +26,9 @@
     "android": {
       "package": "io.github.burntoast"
     },
+    "androidStatusBar": {
+      "backgroundColor": "#fcbf5e"
+    },
     "facebookAppId": "223129748069711",
     "facebookDisplayName": "Burntoast",
     "extra": {
