Rename environment variables

--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
     "facebookAppId": "223129748069711",
     "facebookDisplayName": "Burntoast",
     "extra": {
-      "env": "dev",
+      "env": "development",
       "enableReduxLogger": false
     }
   }
