--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.3.1",
     "react-dom": "^16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-animatable": "^1.3.0",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^0.18.2",
     "react-native-gesture-responder": "^0.1.1",
