Add more store data

--- a/app.json
+++ b/app.json
@@ -27,6 +27,7 @@
       "package": "io.github.burntoast"
     },
     "androidStatusBar": {
+      "barStyle": "light-content",
       "backgroundColor": "#fcbf5e"
     },
     "facebookAppId": "223129748069711",
